[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeypot-blocklist"
version = "1.0.0"
description = "HFish-based honeypot threat feed tools and integrations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Yue Xuan" }
]
keywords = ["threat-intelligence", "honeypot", "hfish", "security", "blocklist"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: System :: Networking :: Firewalls"
]

dependencies = [
  "requests>=2.31.0"
]

[project.scripts]
honeypot-feed = "tools.cli:main"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
